RESOLVED FIXED111962
RenderSnapshottedPlugIn paints in PaintPhaseBlockBackground instead of PaintPhaseForeground
https://bugs.webkit.org/show_bug.cgi?id=111962
Summary RenderSnapshottedPlugIn paints in PaintPhaseBlockBackground instead of PaintP...
Tim Horton
Reported 2013-03-11 01:30:36 PDT
This doesn't make sense to me, and breaks with plugins that are display: block'd (http://www.earslap.com/projectslab/otomata). Plugins normally (see RenderWidget::paint) paint in the foreground phase. There might be a good reason things are as they are now, so I'd like Dino to review this. <rdar://problem/13289335>
Attachments
patch (1.60 KB, patch)
2013-03-11 01:32 PDT, Tim Horton
dino: review+
Tim Horton
Comment 1 2013-03-11 01:32:03 PDT
Dean Jackson
Comment 2 2013-03-11 01:43:27 PDT
Comment on attachment 192424 [details] patch Nope - you're right! This explains the disappearing snapshots :)
Tim Horton
Comment 3 2013-03-11 01:45:53 PDT
Note You need to log in before you can comment on or make changes to this bug.