RenderSnapshottedPlugIn paints in PaintPhaseBlockBackground instead of PaintPhaseForeground https://bugs.webkit.org/show_bug.cgi?id=111962 <rdar://problem/13289335>

Reviewed by Dean Jackson.

RenderSnapshottedPlugIn should paint its snapshot during the foreground
painting phase, instead of BlockBackground, to match normal plugin painting.

* rendering/RenderSnapshottedPlugIn.cpp:
(WebCore::RenderSnapshottedPlugIn::paint):


Canonical link: https://commits.webkit.org/130306@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145346 268f45cc-cd09-0410-ab3c-d52691b4dbfc